tests/expectations/compiler/statements/non_existant_var_exp_fail.out
Error [ETYC0372005]: Unknown variable `z`
    --> compiler-test:4:19
     |
   4 | 	let b: u8 = 1u8**z;
     |                   ^
